@@ -73,6 +73,7 @@ import com.shtrih.jpos.fiscalprinter.PrinterImage;
 import com.shtrih.jpos.fiscalprinter.ReceiptImages;
 import com.shtrih.util.BitUtils;
 import com.shtrih.fiscalprinter.command.FMTotals;
+import com.shtrih.fiscalprinter.command.FSPrintCorrectionReceipt;
 import com.shtrih.fiscalprinter.command.FSPrintCorrectionReceipt2;
 import com.shtrih.fiscalprinter.command.FSReadExpDate;
 import com.shtrih.fiscalprinter.command.FSReadSerial;
@@ -978,6 +979,10 @@ public class SMFiscalPrinterNull implements SMFiscalPrinter {
         return null;
     }
 
+    public int fsPrintCorrectionReceipt(FSPrintCorrectionReceipt command) throws Exception {
+        return 0;
+    }
+    
     public int fsPrintCorrectionReceipt2(FSPrintCorrectionReceipt2 command) throws Exception {
         return 0;
     }
