@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "445";
+    public static final String VERSION = "447-1-gff2eaa3";
 }
