@@ -6,6 +6,13 @@
   
 ********************************************************************************
 
+  July 7 2017, 19:20
+  deviceServiceVersion = 1013448
+	
+  [+] Added directIO command SMFPTR_DIO_PRINT_CORRECTION
+  
+********************************************************************************
+
   July 6 2017, 13:32
   deviceServiceVersion = 1013447
 	
